added readme.md file

--- a/image2.html
+++ b/image2.html
@@ -105,6 +105,17 @@
 
 
 
+
+
+
+
+
+    
+
+    <button class="buttonS"> <a href="image1.html"> Back </a> </button>
+    <button class="buttonS"> <a href="image3.html"> Next </a> </button>
+
+
 </body>
 
 </html>
