added readme.md file

--- a/image2.html
+++ b/image2.html
@@ -21,7 +21,7 @@
         <h3>Floating Articles</h3>
 
         <div class="flow">
-            <article class="dis">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
                 nisi ut aliquip ex ea commodo consequat.
@@ -32,7 +32,7 @@
         </div>
 
         <div class="flow">
-            <article class="dis">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
                 nisi ut aliquip ex ea commodo consequat.
@@ -44,7 +44,7 @@
 
 
         <div class="flow">
-            <article class="dis">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            <article>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                 sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
                 nisi ut aliquip ex ea commodo consequat.
