--- a/EX2.html
+++ b/EX2.html
@@ -16,16 +16,16 @@
 <div class="container">
 
 <div class="odd">
-<div>1</div>
-<div>2</div>
-<div>3</div>
-<div>4</div>
-<div>5</div>
-<div>6</div>
-<div>7</div>
-<div>8</div>
-<div>9</div>
-<div>10</div>
+<div class="roz">1</div>
+<div class="roz">2</div>
+<div class="roz">3</div>
+<div class="roz">4</div>
+<div class="roz">5</div>
+<div class="roz">6</div>
+<div class="roz">7</div>
+<div class="roz">8</div>
+<div class="roz">9</div>
+<div class="roz">10</div>
 </div>
 
 
